--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.17.1",
-    "lodash": "^4.17.4",
+    "boom": "^7.2.2",
+    "cryptiles": "^4.1.3",
+    "fsevents": "^1.2.4",
+    "hawk": "^7.0.10",
+    "lodash": "^4.17.11",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-scripts": "1.0.17",
-    "react-select": "^1.1.0"
+    "react-scripts": "^2.1.1",
+    "react-select": "^1.1.0",
+    "sntp": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
